fixed spacing issue

--- a/src/index.css
+++ b/src/index.css
@@ -817,6 +817,20 @@ border: 1px solid rgba(73, 134, 255, 0.5);
 .heading{
   font-size: 40px;
 }
+.pt-4-3{
+  padding-top: 4.3rem;
+}
+.pb-4-3{
+  padding-bottom: 4.3rem;
+}
+.my-8-5{
+  margin-top: 8.5rem;
+  margin-bottom: 8.5rem;
+}
+.px-4-3{
+  padding-left: 70px;
+  padding-right: 70px;
+}
 .h1{
   font-size: 80px;
 }
@@ -862,9 +876,23 @@ box-shadow: 4px 4px 100px rgba(113, 120, 133, 0.15);
   margin-left: 0 !important;
   margin-right: 0 !important;
 }
-.px-4-3{
+.pl-4-3{
   padding-left: 4.3rem;
-  padding-right: 4.3rem;
+}
+.w-420{
+  width: 420px;
+}
+.h-576{
+  height: 576px;
+}
+.mt-9-3{
+  margin-top: 9.3rem;
+}
+.mb-6-3{
+  margin-bottom: 6.3rem;
+}
+.mt-14-5{
+  margin-top: 14.5rem;
 }
 
 }
